--- a/.env
+++ b/.env
@@ -5,5 +5,8 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:l19d5Y2Yh}}7[W\xs,P+@159.223.248.224:5432/taskbuddy?schema=public"
+DATABSE_HOST="159.223.248.224"
+DATABASE_PASSWORD="l19d5Y2Yh}}7[W\xs,P+"
+DATABASE_USER="postgres"
 
 AUTH_SECRET="W0J+T)F@Q#)_(jwi0oey)($#^_%TUJ09)"
