Add a page to manage killswitches

--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ DATABASE_PASSWORD="l19d5Y2Yh}}7[W\xs,P+"
 DATABASE_USER="postgres"
 
 AUTH_SECRET="W0J+T)F@Q#)_(jwi0oey)($#^_%TUJ09)"
+JWT_SECRET="tajni_kljuc123"
