--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "firebase-admin": "^12.0.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.341.0",
     "next": "14.1.0",
