--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.13",
     "next-themes": "^0.2.1",
+    "nextjs-toploader": "^1.6.6",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
