--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,8 @@
 {
-  "extends": "next/core-web-vitals"
+    "extends": "next/core-web-vitals",
+    "rules": {
+        "react/no-unescaped-entities": 0,
+        "@next/next/no-html-link-for-pages": "off",
+        "react-hooks/rules-of-hooks": "off"
+    }
 }
