--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-react": "^8.0.0",
     "firebase-admin": "^12.0.0",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
